--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
   <script src="node_modules/lodash/lodash.js"></script>
   <script src="src/data/exampleVideoData.js"></script>
+  <script src="src/config/youtube.js"></script>
+  <script src="src/lib/searchYouTube.js"></script>
+  <script src="spec/data/moreFakeVideoData.js"></script>
+  <script src="spec/data/fakeVideoData.js"></script>
+
 </head>
 <body>
   <div id="app"></div>
